src/Parser/gen/parser.output
Nonterminals useless in grammar

   If
   For
   While
   Dictionary
   KeyValuePairs
   KeyValuePair


Terminals unused in grammar

   "=>"
   INTERFACE
   TRAIT
   ENUM
   IF
   FOR
   WHILE
   SPECIAL_IDENTIFIER
   SPECIAL_ARGUMENT
   SPECIAL_LOOP_ARGUMENT


Rules useless in grammar

  116 If: IF CommandChain "{" Program "}"
  117   | IF Expressions Expression

  118 For: FOR CommandChain "{" Program "}"
  119    | FOR Expressions Expression

  120 While: WHILE CommandChain "{" Program "}"
  121      | WHILE Expressions Expression

  122 Dictionary: "{" KeyValuePairs "}"
  123           | "{" KeyValuePair "," "}"

  124 KeyValuePairs: KeyValuePairs KeyValuePair
  125              | %empty

  126 KeyValuePair: Expression ":" Expression


Rules useless in parser due to conflicts

  109 Extends: %empty


State 22 conflicts: 12 shift/reduce
State 31 conflicts: 2 shift/reduce
State 46 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce
State 104 conflicts: 2 shift/reduce
State 113 conflicts: 1 shift/reduce
State 119 conflicts: 1 reduce/reduce
State 120 conflicts: 2 shift/reduce
State 194 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Program Statement StatementTerminator
    2        | %empty

    3 Statement: VariableDeclaration
    4          | Function
    5          | Class
    6          | CommandChain

    7 CommandChain: CommandChain Expressions
    8             | Expressions

    9 Expressions: Expressions "," Expression
   10            | Expression

   11 Expression: Expression ".." Expression
   12           | Expression "+=" Expression
   13           | Expression "-=" Expression
   14           | Expression "*=" Expression
   15           | Expression "/=" Expression
   16           | Expression "%=" Expression
   17           | Expression "**=" Expression
   18           | Expression "+" Expression
   19           | Expression "-" Expression
   20           | Expression "*" Expression
   21           | Expression "/" Expression
   22           | Expression "%" Expression
   23           | Expression "**" Expression
   24           | Expression "<<=" Expression
   25           | Expression ">>=" Expression
   26           | Expression "<<" Expression
   27           | Expression ">>" Expression
   28           | Expression "==" Expression
   29           | Expression "!=" Expression
   30           | Expression "<=>" Expression
   31           | Expression "<=" Expression
   32           | Expression ">=" Expression
   33           | Expression "<" Expression
   34           | Expression ">" Expression
   35           | Assignable "=" Expression
   36           | Assignable ":=" Expression
   37           | Expression "&=" Expression
   38           | Expression "|=" Expression
   39           | Expression "^=" Expression
   40           | Expression "&" Expression
   41           | Expression "|" Expression
   42           | Expression "^" Expression
   43           | Expression "&&" Expression
   44           | Expression "||" Expression
   45           | Expression "xor" Expression
   46           | Expression "::" Expression
   47           | Expression "->" Expression
   48           | Expression ":>" Expression
   49           | Expression IS Expression
   50           | Expression ISSUB Expression
   51           | "~" Expression
   52           | "!" Expression
   53           | "+" Expression
   54           | "-" Expression
   55           | ExpressionItem

   56 ParenthesizedExpression: "(" Expression ")"

   57 Assignable: ExpressionItem ":" IDENTIFIER
   58           | ExpressionItem

   59 VariableDeclaration: DeclarationModifier Assignable "=" Expression
   60                    | DeclarationModifier Assignable

   61 DeclarationModifier: VAR
   62                    | LET
   63                    | FINAL
   64                    | CONST

   65 ExpressionItem: Property

   66 Property: PropertyPrefix PropertySuffix
   67         | PropertyPrefix

   68 PropertyPrefix: Literal
   69               | IDENTIFIER
   70               | ParenthesizedExpression

   71 PropertySuffix: PropertySuffix PropertySuffixItem
   72               | PropertySuffixItem

   73 PropertySuffixItem: "." IDENTIFIER
   74                   | "[" Expressions "]"
   75                   | "(" Expressions ")"
   76                   | "(" ")"

   77 Literal: Number
   78        | String
   79        | Array
   80        | Tuple
   81        | Set
   82        | Regex

   83 Number: NUMBER

   84 String: SINGLE_QUOTED_STRING
   85       | DOUBLE_QUOTED_STRING

   86 Array: "[" Expressions "]"

   87 Tuple: "(" Expressions "," Expression ")"
   88      | "(" Expression "," ")"

   89 Set: "{" Expressions "}"
   90    | "{" Expression "," "}"

   91 Regex: REGEX

   92 Function: FUNCTION Arguments "{" Program "}"
   93         | FUNCTION IDENTIFIER Arguments "{" Program "}"

   94 Class: CLASS Arguments OptionalIdentifier Extends "{" Program "}"

   95 Arguments: "(" Declarations ")"
   96          | "(" ")"
   97          | %empty

   98 Declarations: Declarations ":" Declaration
   99             | Declaration

  100 Declaration: IDENTIFIER Type Initializer

  101 Type: ":" IDENTIFIER
  102     | %empty

  103 Initializer: "=" IDENTIFIER
  104            | %empty

  105 OptionalIdentifier: IDENTIFIER
  106                   | %empty

  107 Extends: %empty
  108        | ":" MoreExtends
  109        | %empty

  110 MoreExtends: MoreExtends Identifiers
  111            | %empty

  112 Identifiers: Identifiers IDENTIFIER
  113            | IDENTIFIER

  114 StatementTerminator: ";"
  115                    | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
".." (258) 11
"." (259) 73
";" (260) 114
":" (261) 57 98 101 108
"," (262) 9 87 88 90
"+=" (263) 12
"-=" (264) 13
"*=" (265) 14
"/=" (266) 15
"%=" (267) 16
"**=" (268) 17
"+" (269) 18 53
"-" (270) 19 54
"*" (271) 20
"/" (272) 21
"%" (273) 22
"**" (274) 23
"<<=" (275) 24
">>=" (276) 25
"<<" (277) 26
">>" (278) 27
"==" (279) 28
"!=" (280) 29
"<=>" (281) 30
"<=" (282) 31
">=" (283) 32
"<" (284) 33
">" (285) 34
"=" (286) 35 59 103
":=" (287) 36
"&=" (288) 37
"|=" (289) 38
"^=" (290) 39
"&" (291) 40
"|" (292) 41
"~" (293) 51
"^" (294) 42
"&&" (295) 43
"||" (296) 44
"!" (297) 52
"xor" (298) 45
"::" (299) 46
"->" (300) 47
":>" (301) 48
"{" (302) 89 90 92 93 94
"}" (303) 89 90 92 93 94
"(" (304) 56 75 76 87 88 95 96
")" (305) 56 75 76 87 88 95 96
"[" (306) 74 86
"]" (307) 74 86
"=>" (308)
VAR (309) 61
LET (310) 62
FINAL (311) 63
CONST (312) 64
IS (313) 49
ISSUB (314) 50
FUNCTION (315) 92 93
CLASS (316) 94
INTERFACE (317)
TRAIT (318)
ENUM (319)
IF (320)
FOR (321)
WHILE (322)
IDENTIFIER (323) 57 69 73 93 100 101 103 105 112 113
SPECIAL_IDENTIFIER (324)
SPECIAL_ARGUMENT (325)
SPECIAL_LOOP_ARGUMENT (326)
NUMBER (327) 83
SINGLE_QUOTED_STRING (328) 84
DOUBLE_QUOTED_STRING (329) 85
REGEX (330) 91
CC (331)
EXPRESSIONS (332)
PREFIX (333)


Nonterminals, with rules where they appear

$accept (79)
    on left: 0
Program (80)
    on left: 1 2, on right: 0 1 92 93 94
Statement (81)
    on left: 3 4 5 6, on right: 1
CommandChain (82)
    on left: 7 8, on right: 6 7
Expressions (83)
    on left: 9 10, on right: 7 8 9 74 75 86 87 89
Expression (84)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27 28
    29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49
    50 51 52 53 54 55, on right: 9 10 11 12 13 14 15 16 17 18 19 20
    21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48 49 50 51 52 53 54 56 59 87 88 90
ParenthesizedExpression (85)
    on left: 56, on right: 70
Assignable (86)
    on left: 57 58, on right: 35 36 59 60
VariableDeclaration (87)
    on left: 59 60, on right: 3
DeclarationModifier (88)
    on left: 61 62 63 64, on right: 59 60
ExpressionItem (89)
    on left: 65, on right: 55 57 58
Property (90)
    on left: 66 67, on right: 65
PropertyPrefix (91)
    on left: 68 69 70, on right: 66 67
PropertySuffix (92)
    on left: 71 72, on right: 66 71
PropertySuffixItem (93)
    on left: 73 74 75 76, on right: 71 72
Literal (94)
    on left: 77 78 79 80 81 82, on right: 68
Number (95)
    on left: 83, on right: 77
String (96)
    on left: 84 85, on right: 78
Array (97)
    on left: 86, on right: 79
Tuple (98)
    on left: 87 88, on right: 80
Set (99)
    on left: 89 90, on right: 81
Regex (100)
    on left: 91, on right: 82
Function (101)
    on left: 92 93, on right: 4
Class (102)
    on left: 94, on right: 5
Arguments (103)
    on left: 95 96 97, on right: 92 93 94
Declarations (104)
    on left: 98 99, on right: 95 98
Declaration (105)
    on left: 100, on right: 98 99
Type (106)
    on left: 101 102, on right: 100
Initializer (107)
    on left: 103 104, on right: 100
OptionalIdentifier (108)
    on left: 105 106, on right: 94
Extends (109)
    on left: 107 108 109, on right: 94
MoreExtends (110)
    on left: 110 111, on right: 108 110
Identifiers (111)
    on left: 112 113, on right: 110 112
StatementTerminator (112)
    on left: 114 115, on right: 1


State 0

    0 $accept: . Program $end

    $default  reduce using rule 2 (Program)

    Program  go to state 1


State 1

    0 $accept: Program . $end
    1 Program: Program . Statement StatementTerminator

    $end                  shift, and go to state 2
    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    VAR                   shift, and go to state 10
    LET                   shift, and go to state 11
    FINAL                 shift, and go to state 12
    CONST                 shift, and go to state 13
    FUNCTION              shift, and go to state 14
    CLASS                 shift, and go to state 15
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Statement                go to state 21
    CommandChain             go to state 22
    Expressions              go to state 23
    Expression               go to state 24
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    VariableDeclaration      go to state 27
    DeclarationModifier      go to state 28
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38
    Function                 go to state 39
    Class                    go to state 40


State 2

    0 $accept: Program $end .

    $default  accept


State 3

   53 Expression: "+" . Expression

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expression               go to state 41
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 4

   54 Expression: "-" . Expression

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expression               go to state 42
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 5

   51 Expression: "~" . Expression

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expression               go to state 43
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 6

   52 Expression: "!" . Expression

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expression               go to state 44
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 7

   89 Set: "{" . Expressions "}"
   90    | "{" . Expression "," "}"

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expressions              go to state 45
    Expression               go to state 46
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 8

   56 ParenthesizedExpression: "(" . Expression ")"
   87 Tuple: "(" . Expressions "," Expression ")"
   88      | "(" . Expression "," ")"

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expressions              go to state 47
    Expression               go to state 48
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 9

   86 Array: "[" . Expressions "]"

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    Expressions              go to state 49
    Expression               go to state 24
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 10

   61 DeclarationModifier: VAR .

    $default  reduce using rule 61 (DeclarationModifier)


State 11

   62 DeclarationModifier: LET .

    $default  reduce using rule 62 (DeclarationModifier)


State 12

   63 DeclarationModifier: FINAL .

    $default  reduce using rule 63 (DeclarationModifier)


State 13

   64 DeclarationModifier: CONST .

    $default  reduce using rule 64 (DeclarationModifier)


State 14

   92 Function: FUNCTION . Arguments "{" Program "}"
   93         | FUNCTION . IDENTIFIER Arguments "{" Program "}"

    "("         shift, and go to state 50
    IDENTIFIER  shift, and go to state 51

    $default  reduce using rule 97 (Arguments)

    Arguments  go to state 52


State 15

   94 Class: CLASS . Arguments OptionalIdentifier Extends "{" Program "}"

    "("  shift, and go to state 50

    $default  reduce using rule 97 (Arguments)

    Arguments  go to state 53


State 16

   69 PropertyPrefix: IDENTIFIER .

    $default  reduce using rule 69 (PropertyPrefix)


State 17

   83 Number: NUMBER .

    $default  reduce using rule 83 (Number)


State 18

   84 String: SINGLE_QUOTED_STRING .

    $default  reduce using rule 84 (String)


State 19

   85 String: DOUBLE_QUOTED_STRING .

    $default  reduce using rule 85 (String)


State 20

   91 Regex: REGEX .

    $default  reduce using rule 91 (Regex)


State 21

    1 Program: Program Statement . StatementTerminator

    ";"  shift, and go to state 54

    $default  reduce using rule 115 (StatementTerminator)

    StatementTerminator  go to state 55


State 22

    6 Statement: CommandChain .
    7 CommandChain: CommandChain . Expressions

    "+"                   shift, and go to state 3
    "-"                   shift, and go to state 4
    "~"                   shift, and go to state 5
    "!"                   shift, and go to state 6
    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    "+"                   [reduce using rule 6 (Statement)]
    "-"                   [reduce using rule 6 (Statement)]
    "~"                   [reduce using rule 6 (Statement)]
    "!"                   [reduce using rule 6 (Statement)]
    "{"                   [reduce using rule 6 (Statement)]
    "("                   [reduce using rule 6 (Statement)]
    "["                   [reduce using rule 6 (Statement)]
    IDENTIFIER            [reduce using rule 6 (Statement)]
    NUMBER                [reduce using rule 6 (Statement)]
    SINGLE_QUOTED_STRING  [reduce using rule 6 (Statement)]
    DOUBLE_QUOTED_STRING  [reduce using rule 6 (Statement)]
    REGEX                 [reduce using rule 6 (Statement)]
    $default              reduce using rule 6 (Statement)

    Expressions              go to state 56
    Expression               go to state 24
    ParenthesizedExpression  go to state 25
    Assignable               go to state 26
    ExpressionItem           go to state 29
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 23

    8 CommandChain: Expressions .
    9 Expressions: Expressions . "," Expression

    ","  shift, and go to state 57

    $default  reduce using rule 8 (CommandChain)


State 24

   10 Expressions: Expression .
   11 Expression: Expression . ".." Expression
   12           | Expression . "+=" Expression
   13           | Expression . "-=" Expression
   14           | Expression . "*=" Expression
   15           | Expression . "/=" Expression
   16           | Expression . "%=" Expression
   17           | Expression . "**=" Expression
   18           | Expression . "+" Expression
   19           | Expression . "-" Expression
   20           | Expression . "*" Expression
   21           | Expression . "/" Expression
   22           | Expression . "%" Expression
   23           | Expression . "**" Expression
   24           | Expression . "<<=" Expression
   25           | Expression . ">>=" Expression
   26           | Expression . "<<" Expression
   27           | Expression . ">>" Expression
   28           | Expression . "==" Expression
   29           | Expression . "!=" Expression
   30           | Expression . "<=>" Expression
   31           | Expression . "<=" Expression
   32           | Expression . ">=" Expression
   33           | Expression . "<" Expression
   34           | Expression . ">" Expression
   37           | Expression . "&=" Expression
   38           | Expression . "|=" Expression
   39           | Expression . "^=" Expression
   40           | Expression . "&" Expression
   41           | Expression . "|" Expression
   42           | Expression . "^" Expression
   43           | Expression . "&&" Expression
   44           | Expression . "||" Expression
   45           | Expression . "xor" Expression
   46           | Expression . "::" Expression
   47           | Expression . "->" Expression
   48           | Expression . ":>" Expression
   49           | Expression . IS Expression
   50           | Expression . ISSUB Expression

    ".."   shift, and go to state 58
    "+="   shift, and go to state 59
    "-="   shift, and go to state 60
    "*="   shift, and go to state 61
    "/="   shift, and go to state 62
    "%="   shift, and go to state 63
    "**="  shift, and go to state 64
    "+"    shift, and go to state 65
    "-"    shift, and go to state 66
    "*"    shift, and go to state 67
    "/"    shift, and go to state 68
    "%"    shift, and go to state 69
    "**"   shift, and go to state 70
    "<<="  shift, and go to state 71
    ">>="  shift, and go to state 72
    "<<"   shift, and go to state 73
    ">>"   shift, and go to state 74
    "=="   shift, and go to state 75
    "!="   shift, and go to state 76
    "<=>"  shift, and go to state 77
    "<="   shift, and go to state 78
    ">="   shift, and go to state 79
    "<"    shift, and go to state 80
    ">"    shift, and go to state 81
    "&="   shift, and go to state 82
    "|="   shift, and go to state 83
    "^="   shift, and go to state 84
    "&"    shift, and go to state 85
    "|"    shift, and go to state 86
    "^"    shift, and go to state 87
    "&&"   shift, and go to state 88
    "||"   shift, and go to state 89
    "xor"  shift, and go to state 90
    "::"   shift, and go to state 91
    "->"   shift, and go to state 92
    ":>"   shift, and go to state 93
    IS     shift, and go to state 94
    ISSUB  shift, and go to state 95

    $default  reduce using rule 10 (Expressions)


State 25

   70 PropertyPrefix: ParenthesizedExpression .

    $default  reduce using rule 70 (PropertyPrefix)


State 26

   35 Expression: Assignable . "=" Expression
   36           | Assignable . ":=" Expression

    "="   shift, and go to state 96
    ":="  shift, and go to state 97


State 27

    3 Statement: VariableDeclaration .

    $default  reduce using rule 3 (Statement)


State 28

   59 VariableDeclaration: DeclarationModifier . Assignable "=" Expression
   60                    | DeclarationModifier . Assignable

    "{"                   shift, and go to state 7
    "("                   shift, and go to state 8
    "["                   shift, and go to state 9
    IDENTIFIER            shift, and go to state 16
    NUMBER                shift, and go to state 17
    SINGLE_QUOTED_STRING  shift, and go to state 18
    DOUBLE_QUOTED_STRING  shift, and go to state 19
    REGEX                 shift, and go to state 20

    ParenthesizedExpression  go to state 25
    Assignable               go to state 98
    ExpressionItem           go to state 99
    Property                 go to state 30
    PropertyPrefix           go to state 31
    Literal                  go to state 32
    Number                   go to state 33
    String                   go to state 34
    Array                    go to state 35
    Tuple                    go to state 36
    Set                      go to state 37
    Regex                    go to state 38


State 29

   55 Expression: ExpressionItem .
   57 Assignable: ExpressionItem . ":" IDENTIFIER
   58           | ExpressionItem .

    ":"  shift, and go to state 100

    "="       reduce using rule 58 (Assignable)
    ":="      reduce using rule 58 (Assignable)
    $default  reduce using rule 55 (Expression)


State 30

   65 ExpressionItem: Property .

    $default  reduce using rule 65 (ExpressionItem)


State 31

   66 Property: PropertyPrefix . PropertySuffix
   67         | PropertyPrefix .

    "."  shift, and go to state 101
    "("  shift, and go to state 102
    "["  shift, and go to state 103

    "("       [reduce using rule 67 (Property)]
    "["       [reduce using rule 67 (Property)]
    $default  reduce using rule 67 (Property)

    PropertySuffix      go to state 104
    PropertySuffixItem  go to state 105


State 32

   68 PropertyPrefix: Literal .

    $default  reduce using rule 68 (PropertyPrefix)


State 33

   77 Literal: Number .

    $default  reduce using rule 77 (Literal)


State 34

   78 Literal: String .

    $default  reduce using rule 78 (Literal)


State 35

   79 Literal: Array .

    $default  reduce using rule 79 (Literal)


State 36

   80 Literal: Tuple .

    $default  reduce using rule 80 (Literal)


State 37

   81 Literal: Set .

    $default  reduce using rule 81 (Literal)


State 38

   82 Literal: Regex .

    $default  reduce using rule 82 (Literal)


State 39

    4 Statement: Function .

    $default  reduce using rule 4 (Statement)


State 40

    5 Statement: Class .

    $default  reduce using rule 5 (Statement)


State 41

   11 Expression: Expression . ".." Expression
   12           | Expression . "+=" Expression
   13           | Expression . "-=" Expression
   14           | Expression . "*=" Expression
   15           | Expression . "/=" Expression
   16           | Expression . "%=" Expression
   17           | Expression . "**=" Expression
   18           | Expression . "+" Expression
   19           | Expression . "-" Expression
   20           | Expression . "*" Expression
   21           | Expression . "/" Expression
   22           | Expression . "%" Expression
   23           | Expression . "**" Expression
   24           | Expression . "<<=" Expression
   25           | Expression . ">>=" Expression
   26           | Expression . "<<" Expression
   27           | Expression . ">>" Expression
   28           | Expression . "==" Expression
   29           | Expression . "!=" Expression
   30           | Expression . "<=>" Expression
   31           | Expression . "<=" Expression
   32           | Expression . ">=" Expression
   33           | Expression . "<" Expression
   34           | Expression . ">" Expression
   37           | Expression . "&=" Expression
   38           | Expression . "|=" Expression
   39           | Expression . "^=" Expression
   40           | Expression . "&" Expression
   41           | Expression . "|" Expression
   42           | Expression . "^" Expression
   43           | Expression . "&&" Expression
   44           | Expression . "||" Expression
   45           | Expression . "xor" Expression
   46           | Expression . "::" Expression
   47           | Expression . "->" Expression
   48           | Expression . ":>" Expression
   49           | Expression . IS Expression
   50           | Expression . ISSUB Expression
   53           | "+" Expression .

    $default  reduce using rule 53 (Expression)


State 42

   11 Expression: Expression . ".." Expression
   12           | Expression . "+=" Expression
   13           | Expression . "-=" Expression
   14           | Expression . "*=" Expression
   15           | Expression . "/=" Expression
   16           | Expression . "%=" Expression
   17           | Expression . "**=" Expression
   18           | Expression . "+" Expression
   19           | Expression . "-" Expression
   20           | Expression . "*" Expression
   21           | Expression . "/" Expression
   22           | Expression . "%" Expression
   23           | Expression . "**" Expression
   24           | Expression . "<<=" Expression
   25           | Expression . ">>=" Expression
   26           | Expression . "<<" Expression
   27           | Expression . ">>" Expression
   28           | Expression . "==" Expression
   29           | Expression . "!=" Expression
   30           | Expression . "<=>" Expression
   31           | Expression . "<=" Expression
   32           | Expression . ">=" Expression
   33           | Expression . "<" Expression
   34           | Expression . ">" Expression
   37           | Expression . "&=" Expression
   38           | Expression . "|=" Expression
   39           | Expression . "^=" Expression
   40           | Expression . "&" Expression
   41           | Expression . "|" Expression
   42           | Expression . "^" Expression
   43           | Expression . "&&" Expression
   44           | Expression . "||" Expression
   45           | Expression . "xor" Expression
   46           | Expression . "::" Expression
   47           | Expression . "->" Expression
   48           | Expression . ":>" Expression
   49           | Expression . IS Expression
   50           | Expression . ISSUB Expression
   54           | "-" Expression .

    $default  reduce using rule 54 (Expression)


State 43

   11 Expression: Expression . ".." Expression
   12           | Expression . "+=" Expression
   13           | Expression . "-=" Expression
   14           | Expression . "*=" Expression
   15           | Expression . "/=" Expression
   16           | Expression . "%=" Expression
   17           | Expression . "**=" Expression
   18           | Expression . "+" Expression
   19           | Expression . "-" Expression
   20           | Expression . "*" Expression
   21           | Expression . "/" Expression
   22           | Expression . "%" Expression
   23           | Expression . "**" Expression
   24           | Expression . "<<=" Expression
   25           | Expression . ">>=" Expression
   26           | Expression . "<<" Expression
   27           | Expression . ">>" Expression
   28           | Expression . "==" Expression
   29           | Expression . "!=" Expression
   30           | Expression . "<=>" Expression
   31           | Expression . "<=" Expression
   32           | Expression . ">=" Expression
   33           | Expression . "<" Expression
   34           | Expression . ">" Expression
   37           | Expression . "&=" Expression
   38           | Expression . "|=" Expression
   39           | Expression . "^=" Expression
   40           | Expression . "&" Expression
   41           | Expression . "|" Expression
   42           | Expression . "^" Expression
   43           | Expression . "&&" Expression
   44           | Expression . "||" Expression
   45           | Expression . "xor" Expression
   46           | Expression . "::" Expression
   47           | Expression . "->" Expression
   48           | Expression . ":>" Expression
   49           | Expression . IS Expression
   50           | Expression . ISSUB Expression
   51           | "~" Expression .

    $default  reduce using rule 51 (Expression)


State 44

   11 Expression: Expression . ".." Expression
   12           | Expression . "+=" Expression
   13           | Expression . "-=" Expression
   14           | Expression . "*=" Expression
   15           | Expression . "/=" Expression
   16           | Expression . "%=" Expression
   17           | Expression . "**=" Expression
   18           | Expression . "+" Expression
   19           | Expression . "-" Expression
   20           | Expression . "*" Expression
   21           | Expression . "/" Expression
   22           | Expression . "%" Expression
   23           | Expression . "**" Expression
   24           | Expression . "<<=" Expression
   25           | Expression . ">>=" Expression
   26           | Expression . "<<" Expression
   27           | Expression . ">>" Expression
   28           | Expression . "==" Expression
   29           | Expression . "!=" Expression
   30           | Expression . "<=>" Expression
   31           | Expression . "<=" Expression
   32           | Expression . ">=" Expression
   33           | Expression . "<" Expression
   34           | Expression . ">" Expression
   37           | Expression . "&=" Expression
   38           | Expression . "|=" Expression
   39           | Expression . "^=" Expression
   40           | Expression . "&" Expression
   41           | Expression . "|" Expression
   42           | Expression . "^" Expression
   43           | Expression . "&&" Expression
   44           | Expression . "||" Expression
   45           | Expression . "xor" Expression
   46           | Expression . "::" Expression
   47           | Expression . "->" Expression
   48           | Expression . ":>" Expression
   49           | Expression . IS Expression
   50           | Expression . ISSUB Expression
   52           | "!" Expression .

    $default  reduce using rule 52 (Expression)


State 45

    9 Expressions: Expressions . "," Expression
   89 Set: "{" Expressions . "}"

    ","  shift, and go to state 57
    "}"  shift, and go to state 106


State 46
